# tackyetl

./: Makefile  README.md  requirements.txt  setup.cfg  setup.py
tackyetl/: db.py  main.py  owm.py
