[metadata]
name = tackyetl
# version = attr: tackyetl.__version__
author = Jonathan Eliashiv
author-email = jeliashiv@gmail.com
home-page = https://github.com/jeliashi/tackyetl
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7
test_suite = tests
setup_requires =
    setuptools >=38.3.0

[options.extras_require]
test =
    green
    coverage

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[options.entry_points]
console_scripts =
    tacky_get = tackyetl.main:get
    tacky_meta = tackyetl.main:meta
    tacky_read = tackyetl.main:read

[build-system]
requires = ['setuptools', 'wheel']